service-mesh/yamls/wordpress/wordpress-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
  namespace: wordpress
spec:
  hosts:
  - "wordpress.gw.mesh.onap.eu"
  gateways:
  - wordpress-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: wordpress
